[gd_scene load_steps=4 format=3 uid="uid://dfh0ehcq5ylm2"]

[ext_resource type="Theme" uid="uid://2sh8kniwmbuq" path="res://Big_Font.tres" id="1_ox5ck"]
[ext_resource type="Script" path="res://Langdocs/prog_54c.gd" id="1_x1j21"]
[ext_resource type="LabelSettings" uid="uid://mogtp5n1f7ns" path="res://Langdocs/Big_Label_38.tres" id="2_des7a"]

[node name="Prog54c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1j21")

[node name="linRadius" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 193.0
offset_top = 19.0
offset_right = 586.0
offset_bottom = 94.0
theme = ExtResource("1_ox5ck")

[node name="lblRadius" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 19.0
offset_right = 278.0
offset_bottom = 104.0
text = "Radius: "
label_settings = ExtResource("2_des7a")

[node name="lblArea" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 157.0
offset_right = 278.0
offset_bottom = 242.0
text = "Area: "
label_settings = ExtResource("2_des7a")

[node name="lblCircum" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 283.0
offset_right = 273.0
offset_bottom = 368.0
text = "Circumference: "
label_settings = ExtResource("2_des7a")

[node name="btnCalc" type="Button" parent="."]
offset_left = 27.0
offset_top = 525.0
offset_right = 273.0
offset_bottom = 625.0
theme = ExtResource("1_ox5ck")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
offset_left = 415.0
offset_top = 523.0
offset_right = 661.0
offset_bottom = 623.0
theme = ExtResource("1_ox5ck")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
offset_left = 792.0
offset_top = 523.0
offset_right = 1038.0
offset_bottom = 623.0
theme = ExtResource("1_ox5ck")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
